--- a/Project 1/readme.me
+++ b/Project 1/readme.me
@@ -7,5 +7,4 @@ Designing and coding a new Android app that implements the following functionali
 ** The user can return to the grid view by selecting the “back” soft button on the phone. 
 ** A long click on any thumbnail will bring up a “context menu” showing the following two options for the car under consideration: 
 		(1) View the entire picture (similar to a simple click); 
-		(2) Show the official web page of the make and model for the selected thumbnail in a new activity (e.g., a picture of a Honda Civic would bring up the Civic’s web page
-			in the official Honda web site).
+		(2) Show the official web page of the make and model for the selected thumbnail in a new activity (e.g., a picture of a Honda Civic would bring up the Civic’s web page in the official Honda web site).
