--- a/Project 1/readme.me
+++ b/Project 1/readme.me
@@ -1,9 +1,8 @@
-Design and implement the following app: 
-** The app contains a text editor window and a button. 
-** When the user opens the app, the text editor window is empty. 
-** The user then types some text. 
-** Embedded in the text could be a phone number in the following format “(xxx) yyy-zzz”. 
-** When the text (possibly containing a phone number) is complete, the user will press the button. 
-** Now your app will look for a phone number embedded in the text typed by the user. 
-** If a phone number conforming to the above format is found, your app will open a dialer window with that phone number showing in the corresponding window. 
-** The user may or may not decide to dial the number; however, under no circumstances your app will dial the number automatically.
+• The application contains a text editor window and a button. 
+• When the user opens the application, the text editor window is empty. 
+• The user then types some text. 
+• Embedded in the text could be a phone number in the following format “(xxx) yyy-zzz”. 
+• When the text (possibly containing a phone number) is complete, the user will press the button. 
+• Now the application will look for a phone number embedded in the text typed by the user. 
+• If a phone number conforming to the above format is found, the application will open a dialer window with that phone number showing in the corresponding window. 
+• The user may or may not decide to dial the number; however, under no circumstances the application will dial the number automatically.
