--- a/Project 3/readme.me
+++ b/Project 3/readme.me
@@ -4,4 +4,5 @@ The status button displays a short toast message indicating the current status o
                    
 Once the six pictures are downloaded, appropriately scaled (and possibly cropped) version of the pictures are displayed in a table layout contained in the second fragment. The user may select one of the six pictures, by clicking on the picture, in which case the entire fragment display is replaced with the picture.
 
-The two fragments are displayed on top of each other (with the list fragment above the picture fragment) when the device is in portrait mode and side-by-side (with the list fragment to the left of the picture fragment) when the device is in landscape mode. Either way, the first fragment takes about 25-35% of the device’s display with the picture fragment taking the remaining portion of the device’s display.
+The two fragments are displayed on top of each other (with the list fragment above the picture fragment) when the device is in portrait mode and side-by-side (with the list fragment to the left of the picture fragment) when the device is in landscape 
+mode. Either way, the first fragment takes about 25-35% of the device’s display with the picture fragment taking the remaining portion of the device’s display.
